--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
+    "qrcode.react": "^4.2.0",
     "rc-drawer": "^5.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
